Creates osdManagedAdmin secrets in CCS accountClaim namespaces
* Creates the osdManagesAdmin secrets as `aws` in the CCS accouncClaim namespaces alongside the `byoc` secrets.
* Replaces references to UHC in accountclaim_controller.go with OCM

REF: https://issues.redhat.com/browse/OSD-3573

Signed-off-by: Christopher Collins <collins.christopher@gmail.com>

--- a/hack/templates/aws_v1alpha1_ccs_accountclaim_cr.tmpl
+++ b/hack/templates/aws_v1alpha1_ccs_accountclaim_cr.tmpl
@@ -18,12 +18,12 @@ objects:
       regions:
       - name: us-east-1
     awsCredentialSecret:
+      name: aws
       namespace: ${NAMESPACE}
-      name: ${NAME}
     byoc: true
     byocAWSAccountID: ${CCS_ACCOUNT_ID}
     byocSecretRef:
-      name: "byoc"
+      name: byoc
       namespace: ${NAMESPACE}
     legalEntity:
       id: "111111"
