Adds ability to change aws account operator credentials based on aws profile

--- a/hack/templates/aws_v1alpha1_aws_account_operator_credentials.tmpl
+++ b/hack/templates/aws_v1alpha1_aws_account_operator_credentials.tmpl
@@ -3,6 +3,7 @@ kind: Template
 parameters:
 - name: OPERATOR_ACCESS_KEY_ID
 - name: OPERATOR_SECRET_ACCESS_KEY
+- name: OPERATOR_NAMESPACE
 metadata:
   name: test-federated-user-template
 objects:
@@ -13,5 +14,5 @@ objects:
   kind: Secret
   metadata:
     name: aws-account-operator-credentials
-    namespace: aws-account-operator
+    namespace: "${OPERATOR_NAMESPACE}"
     type: Opaque
