deploy configmap in make
remove redundant target

change accountlimit on makefile from 1 to 0

--- a/hack/templates/aws_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws_v1alpha1_configmap.tmpl
@@ -3,6 +3,7 @@ kind: Template
 parameters:
 - name: ROOT 
 - name: BASE
+- name: ACCOUNTLIMIT
 metadata:
   name: test-aws-ou-mapping-configmap-template
 objects:
@@ -14,3 +15,4 @@ objects:
   data:
     root: ${ROOT}
     base: ${BASE}
+    account-limit: ${ACCOUNTLIMIT}
