Adds concurrent reconciles.

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -16,3 +16,8 @@ objects:
     root: ${ROOT}
     base: ${BASE}
     account-limit: ${ACCOUNTLIMIT}
+    MaxReconciles.account: "1"
+    MaxReconciles.accountclaim: "1"
+    MaxReconciles.accountpool: "1"
+    MaxReconciles.awsfederatedaccountaccess: "1"
+    MaxReconciles.awsfederatedrole: "1"
