--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -19,3 +19,21 @@ objects:
     base: ${BASE}
     quota.vcpu: ${VCPU_QUOTA}
     account-limit: ${ACCOUNTLIMIT}
+    regions: |
+      us-east-1: ami-000db10762d0c4c05
+      us-east-2: ami-094720ddca649952f
+      us-west-1: ami-04642fc8fca1e8e67
+      us-west-2: ami-0a7e1ebfee7a4570e
+      ca-central-1: ami-06ca3c0058d0275b3
+      eu-north-1: ami-08bc26bf92a90ba04
+      eu-central-1: ami-09de4a4c670389e4b
+      eu-west-1: ami-0202869bdd0fc8c75
+      eu-west-2: ami-0188c0c5eddd2d032
+      eu-west-3: ami-0c4224e392ec4e440
+      ap-northeast-1: ami-00b95502a4d51a07e
+      ap-northeast-2: ami-041b16ca28f036753
+      ap-northeast-3: ami-08c911bb0e215283f
+      ap-south-1: ami-0963937a03c01ecd4
+      ap-southeast-1: ami-055c55112e25b1f1f
+      ap-southeast-2: ami-036b423b657376f5b
+      sa-east-1: ami-05c1c16cac05a7c0b
