Initialize all regions in an account

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -20,20 +20,26 @@ objects:
     quota.vcpu: ${VCPU_QUOTA}
     account-limit: ${ACCOUNTLIMIT}
     regions: |
-      us-east-1: ami-000db10762d0c4c05
-      us-east-2: ami-094720ddca649952f
-      us-west-1: ami-04642fc8fca1e8e67
-      us-west-2: ami-0a7e1ebfee7a4570e
-      ca-central-1: ami-06ca3c0058d0275b3
-      eu-north-1: ami-08bc26bf92a90ba04
-      eu-central-1: ami-09de4a4c670389e4b
-      eu-west-1: ami-0202869bdd0fc8c75
-      eu-west-2: ami-0188c0c5eddd2d032
-      eu-west-3: ami-0c4224e392ec4e440
-      ap-northeast-1: ami-00b95502a4d51a07e
-      ap-northeast-2: ami-041b16ca28f036753
-      ap-northeast-3: ami-08c911bb0e215283f
-      ap-south-1: ami-0963937a03c01ecd4
-      ap-southeast-1: ami-055c55112e25b1f1f
-      ap-southeast-2: ami-036b423b657376f5b
-      sa-east-1: ami-05c1c16cac05a7c0b
+      us-east-1:ami-000db10762d0c4c05:t2.micro
+      us-east-2:ami-094720ddca649952f:t2.micro
+      us-west-1:ami-04642fc8fca1e8e67:t2.micro
+      us-west-2:ami-0a7e1ebfee7a4570e:t2.micro
+      ca-central-1:ami-06ca3c0058d0275b3:t2.micro
+      eu-north-1:ami-08bc26bf92a90ba04:t3.micro
+      eu-central-1:ami-09de4a4c670389e4b:t2.micro
+      eu-west-1:ami-0202869bdd0fc8c75:t2.micro
+      eu-west-2:ami-0188c0c5eddd2d032:t2.micro
+      eu-west-3:ami-0c4224e392ec4e440:t2.micro
+      eu-south-1:ami-04684e5a51afd7579:t3.micro
+      ap-northeast-1:ami-00b95502a4d51a07e:t2.micro
+      ap-northeast-2:ami-041b16ca28f036753:t2.micro
+      ap-northeast-3:ami-070dd2ec8c4a6df38:t2.micro
+      ap-east-1:ami-f4fab885:t3.micro
+      ap-south-1:ami-0963937a03c01ecd4:t2.micro
+      ap-southeast-1:ami-055c55112e25b1f1f:t2.micro
+      ap-southeast-2:ami-036b423b657376f5b:t2.micro
+      sa-east-1:ami-05c1c16cac05a7c0b:t2.micro
+      af-south-1:ami-0f4b49fefef9be45a:t3.micro
+      me-south-1:ami-0b41a37a62a4296fc:t3.micro
+
+
