Adds field to support custom tags

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_sts_accountclaim_cr.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_sts_accountclaim_cr.tmpl
@@ -28,3 +28,6 @@ objects:
       name: ${NAME}
     manualSTSMode: true
     stsRoleARN: ${STS_ROLE_ARN}
+    customTags: |
+      test=true
+      my-cluster=yes
