Address code review comments

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -7,6 +7,7 @@ parameters:
 - name: VCPU_QUOTA
 - name: OPERATOR_NAMESPACE
 - name: STS_JUMP_ARN
+- name: SUPPORT_JUMP_ROLE
 metadata:
   name: test-aws-ou-mapping-configmap-template
 objects:
@@ -43,3 +44,4 @@ objects:
       af-south-1:ami-0f4b49fefef9be45a:t3.micro
       me-south-1:ami-0b41a37a62a4296fc:t3.micro
     sts-jump-role: ${STS_JUMP_ARN}
+    support-jump-role: ${SUPPORT_JUMP_ROLE}
