Try to properly tag account if it has a missing or incorrect owner tag

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -56,3 +56,4 @@ objects:
     support-jump-role: ${SUPPORT_JUMP_ROLE}
     feature.validation_move_account: "false"
     feature.validation_tag_account: "false"
+    shard-name: local
