Add multiple accountpools to AAO

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -57,3 +57,6 @@ objects:
     feature.validation_move_account: "false"
     feature.validation_tag_account: "false"
     shard-name: local
+    accountpool: | 
+      zero-size-accountpool: 
+        default: true
