--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -51,7 +51,7 @@ objects:
       sa-east-1:ami-05c1c16cac05a7c0b:t2.micro
       af-south-1:ami-0f4b49fefef9be45a:t3.micro
       me-south-1:ami-0b41a37a62a4296fc:t3.micro
-      me-central-1:ami--055c2e795a60f269a:t3.micro
+      me-central-1:ami-055c2e795a60f269a:t3.micro
       us-gov-west-1:ami-2c74214d:t2.micro
       us-gov-east-1:ami-9e10f0ef:t2.micro
     sts-jump-role: ${STS_JUMP_ARN}
