Enabling ap-south-2 region for cloud provider operators

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -45,6 +45,7 @@ objects:
       ap-northeast-3:ami-070dd2ec8c4a6df38:t2.micro
       ap-east-1:ami-f4fab885:t3.micro
       ap-south-1:ami-0963937a03c01ecd4:t2.micro
+      ap-south-2:ami-07fc4af782348e97c:t3.micro
       ap-southeast-1:ami-055c55112e25b1f1f:t2.micro
       ap-southeast-2:ami-036b423b657376f5b:t2.micro
       ap-southeast-3:ami-095c30251fd6a1c5e:t3.micro
