[OSD-14200] Implement servicequota change/increase for an accountpool

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -33,5 +33,6 @@ objects:
     support-jump-role: ${SUPPORT_JUMP_ROLE}
     feature.validation_move_account: "false"
     feature.validation_tag_account: "false"
+    feature.accountpool_validation: "true"
     shard-name: local
     accountpool: ${ACCOUNTPOOL_CONFIG}
