[OSD-14200-added-maxconcurrent-reconcile-limt] Add MaxConcurrentReconciles limit for accountpool validation

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -24,6 +24,7 @@ objects:
     account-limit: ${ACCOUNT_LIMIT}
     MaxConcurrentReconciles.account: "2"
     MaxConcurrentReconciles.accountvalidation: "2"
+    MaxConcurrentReconciles.accountpoolvalidation: "1"
     MaxConcurrentReconciles.accountclaim: "1"
     MaxConcurrentReconciles.accountpool: "1"
     MaxConcurrentReconciles.awsfederatedaccountaccess: "1"
