[OSD-19300-add-feature-flag] Added feature flag for FleetmanagerConfig

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -35,5 +35,6 @@ objects:
     feature.validation_move_account: "false"
     feature.validation_tag_account: "false"
     feature.accountpool_validation: "false"
+    feature.accountcliam_fleet_manger_trusted_arn: "false"
     shard-name: local
     accountpool: ${ACCOUNTPOOL_CONFIG}
