Add a new validation check to delete accounts.
This check - in contrast to all other checks - will only run for Failed
accounts that have no AWSAccountId. If this is the case and the feature
is enabled the account CR will be deleted.

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -34,6 +34,7 @@ objects:
     support-jump-role: ${SUPPORT_JUMP_ROLE}
     feature.validation_move_account: "false"
     feature.validation_tag_account: "false"
+    feature.validation_delete_account: "false"
     feature.accountpool_validation: "false"
     feature.accountclaim_fleet_manager_trusted_arn: "false"
     shard-name: local
