[OSD-21095] Implements region enablement for supported opt-in regions for new non-ccs accounts

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -37,5 +37,6 @@ objects:
     feature.validation_delete_account: "false"
     feature.accountpool_validation: "false"
     feature.accountclaim_fleet_manager_trusted_arn: "false"
+    feature.opt_in_regions: "false"
     shard-name: local
     accountpool: ${ACCOUNTPOOL_CONFIG}
