[OSD-21095] updated supported opt-in regions

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -38,5 +38,6 @@ objects:
     feature.accountpool_validation: "false"
     feature.accountclaim_fleet_manager_trusted_arn: "false"
     feature.opt_in_regions: "false"
+    opt-in-regions: "af-south-1,ap-southeast-4"
     shard-name: local
     accountpool: ${ACCOUNTPOOL_CONFIG}
