--- a/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_configmap.tmpl
@@ -37,5 +37,7 @@ objects:
     feature.validation_delete_account: "false"
     feature.accountpool_validation: "false"
     feature.accountclaim_fleet_manager_trusted_arn: "false"
+    feature.opt_in_regions: "false"
+    opt-in-regions: "af-south-1,ap-southeast-4"
     shard-name: local
     accountpool: ${ACCOUNTPOOL_CONFIG}
