Refactor AAO local testing framework

--- a/hack/templates/aws.managed.openshift.io_v1alpha1_aws_account_operator_credentials.tmpl
+++ b/hack/templates/aws.managed.openshift.io_v1alpha1_aws_account_operator_credentials.tmpl
@@ -3,6 +3,8 @@ kind: Template
 parameters:
 - name: OPERATOR_ACCESS_KEY_ID
 - name: OPERATOR_SECRET_ACCESS_KEY
+- name: OPERATOR_SESSION_TOKEN
+  value: ""
 - name: OPERATOR_NAMESPACE
 metadata:
   name: test-federated-user-template
@@ -11,6 +13,7 @@ objects:
   data:
     aws_access_key_id: "${OPERATOR_ACCESS_KEY_ID}"
     aws_secret_access_key: "${OPERATOR_SECRET_ACCESS_KEY}"
+    aws_session_token: "${OPERATOR_SESSION_TOKEN}"
   kind: Secret
   metadata:
     name: aws-account-operator-credentials
